<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HotSpotTV</string>
    <string name="splash_logo_content_desc">Logo HotSpotTV</string>
    <string name="tv_code_screen_title">Conectar Codigo TV</string>
    <string name="tv_code_screen_subtitle">Digite ou selecione um codigo para carregar o conteudo.</string>
    <string name="tv_code_hint">Ex.: TV2665487D</string>
    <string name="connect_button">Conectar</string>
    <string name="recent_codes_title">Codigos recentes</string>
    <string name="invalid_tv_code">Codigo invalido. Use o formato TV + pelo menos 6 caracteres.</string>
    <string name="loading_content">Carregando conteudo...</string>
    <string name="error_loading_content">Falha ao carregar</string>
    <string name="error_device_id_required">Nao foi possivel identificar este aparelho. Verifique a configuracao.</string>
    <string name="error_tv_limit_reached">Este aparelho nao esta autorizado para este cliente.</string>
    <string name="home_button">Inicio</string>
    <string name="showing_cached_content">Exibindo conteudo em cache</string>
    <string name="webview_load_error">Erro ao renderizar a pagina.</string>
    <string name="image_load_error">Erro ao carregar a imagem.</string>
    <string name="rendered_image_content_desc">Imagem renderizada</string>
    <string name="rendered_video_content_desc">Video renderizado</string>
    <string name="video_load_error">Erro ao carregar o video.</string>
    <string name="retry">Tentar novamente</string>
    <string name="swap_content_button">Trocar</string>
    <string name="display_duration_default">Tempo: padrao</string>
    <string name="display_duration_seconds">Tempo: %1$ds</string>
    <string name="display_duration_video">Tempo: video ate o fim</string>
    <string name="display_duration_video_seconds">Tempo: %1$ds</string>
    <string name="countdown_remaining">Restante: %1$ds</string>
    <string name="countdown_unavailable">Restante: --</string>
    <string name="countdown_video_live">Restante: video em reproducao</string>
</resources>
